--- a/public/assets/scss/layout/_program.scss
+++ b/public/assets/scss/layout/_program.scss
@@ -684,4 +684,10 @@
 .clr-6 .bd-program-title:hover a {
     color: var(--bd-theme-10);
 }
+
+.custom-tooltip {
+    --bs-tooltip-bg: var(--bs-primary);
+  }
+  
+
 //  PROGRAM CSS END HERE
